src/test/deca/syntax/valid/decl_var.deca
//Test Syntaxe - Declaration de variables sans initialisation 1
//Resultat: 0 Erreur

{
   int b,c;
}