src/test/deca/syntax/invalid/multiple_decl_var_invalid.deca
// Description:
//    Declaration invalide de plusieurs variables
//
// Resultats:
//    Erreur
//


{
        int;
        int a;
        int b;
}